# EmployeeDB

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  env_template  test.sh
data/: names_female.json  names_male.json  patronymics_female.json  patronymics_male.json  surnames_male.json
include/: database.hpp  employee.hpp  employee_generator.hpp
src/: database.cpp  employee.cpp  employee_generator.cpp  main.cpp
